[WIP] add confirmable module in user

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,3 +21,6 @@
 
 en:
   hello: "Hello world"
+  user:
+    confirmation:
+      confirmation_period_expired: "Confirmation link Expired. Please request a new one."
