--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,9 +30,12 @@ en:
               unconfirmed: "address needs to be confirm before continuing."
               confirm: "address has been successfully confirmed."
               already_confirmed: "was already confirmed, please try signing in."
+              not_found: "not found."
             confirmation_token:
               confirmation_period_expired: "is Expired. Please request a new one."
               not_found: "Email with this token was not found."
+            password:
+              not_match: "does not match with confirm password"
     success:
       models:
         user:
